feat(web): add encryption for diaries
